# World-Cup-Match-Reservation-site

./: 1- Moderator Add Match.m4v  README.md  package-lock.json
World Cup/WorldCup/: World_Cup.session.sql  manage.py  pyproject.toml  render.yaml  script.sh
World Cup/WorldCup/World_Cup/: settings.py
World Cup/WorldCup/accounts/: models.py  urls.py  views.py
World Cup/WorldCup/accounts/migrations/: 0001_initial.py  0003_remove_user_username_remove_user_firstname_and_more.py  0004_rename_user_acc_user.py  0006_user_approved.py  0008_alter_user_email.py  0009_alter_user_nationality.py
World Cup/WorldCup/accounts/templates/: index.html  signup.html
World Cup/WorldCup/api/: INSERT INTO matches_matches (.sql  Untitled-1.sql  approve.py  matches_views.py  serializers.py  urls.py  views.py
World Cup/WorldCup/assets/css/: register.css
World Cup/WorldCup/matches/: models.py
World Cup/WorldCup/matches/migrations/: 0002_stadiums_alter_refrees_name_matches.py  0003_tickets.py  0005_alter_teams_link.py  0007_alter_matches_unique_together_matches_refree_and_more.py  0009_alter_matches_options.py  0010_alter_tickets_options.py  0011_tickets_status.py  0012_alter_tickets_user.py  0013_rename_status_tickets_seat_status.py
consult/mycode/: package-lock.json  package.json
consult/mycode/front_end/: db-1672448747950.json  package.json
consult/mycode/my-app/: package-lock.json
front_end/: .gitignore  package-lock.json  package.json
front_end/src/: App.js  Modal.js  index.css  index.js
front_end/src/pages/: AdminPage.js  AllMeetups.js  Approvebutton.js  Login.css  (+9 more)
(+79 files in other folders)
